# jira-integration

./: .pep8speaks.yml  Dockerfile  Pipfile  README.md  codefresh-setuptools.yml  codefresh.yml  config.py  main.py  publish.sh  publish_setuptools.sh  pyproject.toml  setup.py  test.sh  test_main.py
jiraintegration/: __init__.py  jira_client.py  main.py
src/: config.py  jira_client.py  util.py
tests/: test_main.py
