[build-system]
# Minimum requirements for the build system to execute
requires = [
    "setuptools",
    "wheel",
    "click",
    "crayons",
    "python-dateutil",
    "jira"
]

[tool.poetry]
name = "jira-integration"
version = "0.1.9"
description = "JIRA utility commands"

packages = [
    {include = "jiraintegration"}
]

authors = [
    "mavx <user@gmail.com>"
]

readme = "README.md"
repository = "https://github.com/mavx/jira-integration"
keywords = ["jira-integration"]

[tool.poetry.dependencies]
python = "^3.7" # Compatible python versions must be declared here

# Dependencies
#requests

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
