[build-system]
# Minimum requirements for the build system to execute
build-backend = "poetry.masonry.api"
requires = [
    "poetry",
    "click",
    "crayons",
    "python-dateutil",
    "jira"
]

[tool.poetry]
name = "jira-integration"
version = "0.1.11"
description = "JIRA utility commands"

packages = [
    {include = "jiraintegration"}
]

authors = [
    "mavx <user@gmail.com>"
]

readme = "README.md"
repository = "https://github.com/mavx/jira-integration"
keywords = ["jira-integration"]

[[tool.poetry.source]]
name = "mavx"
url = "http://pypi.xvam.org"
